# offsetCurveDeformer

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_patent_optimized.bat  build_simple.bat  build_test.bat  build_test.sh  cmakecommand.txt  debug_connection_test.mel  module.txt  t.bat  test_maya_plugin.py  test_ocd_patent.py  test_offsetCurveDeformer.mel  test_offsetCurveDeformer.py  test_outputArrayValue.mel  test_plugin.py  test_plugin_loading.mel  test_plugin_loading.py  test_plugin_loading_maya_compatible.py
build.2020/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt  offsetCurveDeformer.sln
build.2020/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  offsetCurveDeformer.vcxproj  offsetCurveDeformer.vcxproj.filters
build.2020/src/Release/: offsetCurveDeformer.exp  offsetCurveDeformer.lib
build.2020/src/offsetCurveDeformer.dir/Release/: offsetCurveDeformer.mll.recipe
build.2020/src/offsetCurveDeformer.dir/Release/offsetCu.2E653C55.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  (+8 more)
build.2020/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build.2020/x64/Release/INSTALL/: INSTALL.recipe
build.2020/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build.clean/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  offsetCurveDeformer.sln
build.clean/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  offsetCurveDeformer.vcxproj  offsetCurveDeformer.vcxproj.filters
build.clean/src/Release/: offsetCurveDeformer.exp  offsetCurveDeformer.mll
build.clean/src/offsetCurveDeformer.dir/Release/: offsetCurveDeformer.mll.recipe
build.clean/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build.clean/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build.optimized/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt  offsetCurveDeformer.sln
build.optimized/lib/Release/: gmock.lib  gmock_main.lib  gtest.lib  gtest_main.lib
build.optimized/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  offsetCurveDeformer.vcxproj  offsetCurveDeformer.vcxproj.filters
build.optimized/src/Release/: offsetCurveDeformer.exp  offsetCurveDeformer.mll
build.optimized/src/offsetCurveDeformer.dir/Release/: offsetCurveDeformer.mll.recipe
build.optimized/tests/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  OCDAlgorithmTests.vcxproj  OCDAlgorithmTests.vcxproj.filters  OCDIntegrationTests.vcxproj  OCDIntegrationTests.vcxproj.filters  OCDPluginTests.vcxproj  OCDPluginTests.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
build.optimized/tests/OCDAlgorithmTests.dir/Release/: OCDAlgorithmTests.exe.recipe
build.optimized/tests/OCDIntegrationTests.dir/Release/: OCDIntegrationTests.exe.recipe
build.optimized/tests/OCDPluginTests.dir/Release/: OCDPluginTests.exe.recipe
build.optimized/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build.optimized/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build.optimized/x64/Release/INSTALL/: INSTALL.recipe
build.optimized/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build.patent/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  offsetCurveDeformer.sln
build.patent/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  offsetCurveDeformer.vcxproj  offsetCurveDeformer.vcxproj.filters
build.patent/src/Release/: offsetCurveDeformer.exp  offsetCurveDeformer.mll
build.patent/src/offsetCurveDeformer.dir/Release/: offsetCurveDeformer.mll.recipe
build.patent/tests/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  OCDAlgorithmTests.vcxproj  OCDAlgorithmTests.vcxproj.filters  OCDIntegrationTests.vcxproj  OCDIntegrationTests.vcxproj.filters  OCDPluginTests.vcxproj  OCDPluginTests.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
build.patent/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
cvWrap/src/: cvwrap.cl
lib/: gmock_main.lib  gtest.lib
lib/pkgconfig/: gmock.pc  gmock_main.pc
modules/: findMaya.cmake
plug-ins/: offsetCurveDeformer.mll
plug-ins/2020/: drawCurveContext.mll  offsetCurveDeformer.mll
scripts/: AEoffsetCurveDeformerTemplate.mel
scripts/offsetCurveDeformer/: __init__.py  menu.py
src/: ArtistControlAnalysis.md  CMakeLists.txt  CodeSpecification.md  DistributionGuide.md  MayaUserGuide.md  MayaUserManual.md  PatentComplianceFinalReport.md  PatentMathematicalFormula.md  PatentViolationAnalysis.md  PerformanceGuide.md  PerformanceMonitor.h  PerformanceTestSuite.h  README.md  common.h  offsetCurveAlgorithm.cpp  offsetCurveAlgorithm.h  offsetCurveBinding.cpp  offsetCurveBinding.h  offsetCurveCmd.cpp  offsetCurveCmd.h  offsetCurveControlParams.cpp  offsetCurveControlParams.h  offsetCurveData.cpp  offsetCurveData.h  offsetCurveDeformer.cpp  offsetCurveDeformer.h  offsetCurveDeformerNode.cpp  offsetCurveDeformerNode.h  offsetCurveDeformerNode_backup.cpp  offsetCurveGPU.cu  offsetCurveKernel.cu  offsetCurveStrategy.cpp  offsetCurveStrategy.h  offsetCurveSystems.cpp  offsetCurveSystems.h  offsetCurveTypes.h  offsetcurve.cl  pluginMain.cpp
tests/: CMakeLists.txt  test_deformation.cpp  test_integration.cpp  test_memory_usage.cpp  test_node_creation.cpp  test_offsetCurveAlgorithm.cpp  test_offsetCurveTypes.cpp  test_performance.cpp  test_performance_benchmark.cpp  test_plugin_loading.cpp
(+108 files in other folders)
